[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/avatar/Avatar.gd" type="Script" id=1]
[ext_resource path="res://player/avatar/CardManager.gd" type="Script" id=2]
[ext_resource path="res://obj/card/DeckPrompt.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/effects/avatar_glow_green.png" type="Texture" id=5]

[node name="Avatar" type="Node2D"]
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]

[node name="NameLabel" type="RichTextLabel" parent="."]
margin_left = -150.0
margin_right = 153.0
margin_bottom = 40.0

[node name="BackgroundGlow" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="PortraitSprite" type="Sprite" parent="."]

[node name="DeckPrompt" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 40, 0 )
scale = Vector2( 0.25, 0.25 )

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource( 2 )
